--- a/project.private.config.json
+++ b/project.private.config.json
@@ -4,7 +4,7 @@
   "setting": {
     "compileHotReLoad": true,
     "bigPackageSizeSupport": false,
-    "urlCheck": true
+    "urlCheck": false
   },
   "libVersion": "2.25.2"
 }
