--- a/project.private.config.json
+++ b/project.private.config.json
@@ -4,7 +4,7 @@
   "setting": {
     "compileHotReLoad": true,
     "bigPackageSizeSupport": true,
-    "urlCheck": false
+    "urlCheck": true
   },
-  "libVersion": "2.25.2"
+  "libVersion": "2.26.1"
 }
