--- a/project.private.config.json
+++ b/project.private.config.json
@@ -1,6 +1,6 @@
 {
   "description": "项目私有配置文件。此文件中的内容将覆盖 project.config.json 中的相同字段。项目的改动优先同步到此文件中。详见文档：https://developers.weixin.qq.com/miniprogram/dev/devtools/projectconfig.html",
-  "projectname": "清云数字健康",
+  "projectname": "%E6%B8%85%E4%BA%91%E6%95%B0%E5%AD%97%E5%81%A5%E5%BA%B7",
   "setting": {
     "compileHotReLoad": true,
     "bigPackageSizeSupport": true,
